# SEO-Agent

./: README.md  pyproject.toml
src/seo_agent/: crew.py  main.py
src/seo_agent/config/: agents.yaml  tasks.yaml
src/seo_agent/tools/: custom_tool.py
