[project]
name = "seo_agent"
version = "0.1.0"
description = "Seo-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
seo_agent = "seo_agent.main:run"
run_crew = "seo_agent.main:run"
train = "seo_agent.main:train"
replay = "seo_agent.main:replay"
test = "seo_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
